deploy/k8s-stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kleenbay-stage
  labels:
    app.kubernetes.io/part-of: kleenbay
    environment: staging
